fixed login animation + blurring background when triggered

--- a/Website/assets/css-import/all.css
+++ b/Website/assets/css-import/all.css
@@ -935,6 +935,14 @@ label {
           width: 17em;
           height: 17rem; } }
 
+.login__blur {
+  filter: blur(3px); }
+
+.header__login--on {
+  transform: translateX(-50%) translateY(0rem) !important;
+  transition: 500ms transform ease-in-out;
+  filter: blur(0px) !important; }
+
 .header__login {
   height: auto;
   display: block;
@@ -952,6 +960,7 @@ label {
   position: absolute;
   left: 50%;
   transform: translateX(-50%) translateY(-60rem);
+  transition: 500ms transform ease-in-out;
   color: white;
   z-index: 101; }
   @media only screen and (min-width: 720px) {
